--- a/04_Loading_Data.Rmd
+++ b/04_Loading_Data.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "Loading Data Into R"
-author: "Steve Pederson  & Pengyi Yang"
-date: "5 December 2015"
+title: "04 Loading Data Into R"
+author: "Steve Pederson, University of Adelaide, Bioinformatics Hub"
 output: html_document
 ---
+
+To return to the previous page click [here](https://uofabioinformaticshub.github.io/schoolOfMedicine2016/) or use the back button on your browser.
 
 ## Loading Data
 We can load data into *R* using some more built-in functions, and by default *R* imports each file as a `data.frame`.
@@ -39,19 +40,22 @@ Now a preview screen has appeared, with numerous options.
   
 **Try changing a few to see what effect they have on the** `data.frame` **preview**
 
-Now load the data, unchecking the `Strings as factors` box, and two lines of code will appear in your console.
+Now load the data, un-checking the `Strings as factors` box, and two lines of code will appear in your console.
 The second line of your code `View(toothData)` was entered by the GUI and will have made a preview frame of your data appear, just like a spreadsheet.
 We can use the function `View()` to inspect an R object anytime, although large objects will be truncated.
-Files with many rows or columns clearly place huge demands on your memory, and there is no pratical advantage to looking at these using this method.
+Files with many rows or columns clearly place huge demands on your memory, and there is no practical advantage to looking at these using this method.
 
 **Two important points**
 
 1. Using the GUI to import data will give the *R* object, the same name as the file name, i.e. `toothData`
 2. Notice that this has generated two lines of code. If using this method, **ALWAYS COPY THE FIRST LINE** to your R script. This contains actual code the GUI used to load your dataset, and just re-running this line will always perform the exact same action. 
 
-In our sample code, we should see  
-`toothData <- read.csv("path/to/data/toothData.csv", stringsAsFactors = FALSE)`.
+In our sample code, we should see:  
+
+`toothData <- read.csv("path/to/data/toothData.csv", stringsAsFactors = FALSE)`  
+
 (NB: `path/to/data/` will actually be different for all of you, depending on where you saved the file.)
+
 Notice that this will have loaded the data, treating the character strings as character strings, instead of categorical variables.
 
 ## Loading Data Without Using a GUI
@@ -91,5 +95,7 @@ However, if we wish to specify these in non-alphabetic order we can set the cate
 ```{r}
 toothData$dose <- factor(toothData$dose, levels=c("Low", "Med", "High"))
 ```
-Notice that in both of the above lines of code, we overwrote the original columns of data in the *R* object `toothData`.
 
+Notice that in both of the above lines of code, *we overwrote the original columns of data* in the *R* object `toothData`.
+
+[Back](https://uofabioinformaticshub.github.io/schoolOfMedicine2016/)
