--- a/index.Rmd
+++ b/index.Rmd
@@ -39,11 +39,10 @@ Otherwise, just download today's data as a `zipfile` using the following link.
 https://github.com/UofABioinformaticsHub/schoolOfMedicine2016/archive/gh-pages.zip
 
 ### Data in R
-[01_Data](01_Data.html)  
-[02_Loading_Data](02_Loading_Data.html)  
-[03_Inspecting_Data](03_Inspecting_Data.html)  
+[01 R and Data Types](01_Data.html)  
+[02 Vectors and Functions in R](02_Vectors.html)  
+[03 Using Data Frames](03_Data_Frames.html)  
+[04 Loading Data Into R](04_Loading_Data.html)
 
-### Functions in R
-[04_Introducing_Functions](04_Introducing_Functions.html)  
-[05_Writing_Functions](05_Writing_Functions.html)  
-[06_Customising_Functions](06_Customising_Functions.html)  
+### Optional Material
+[05 Inspecting Data](05_Inspecting_Data.html)
